<resources>
    <string name="app_name">DG Logistics</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DG Logistics</string>
    <string name="nav_header_subtitle">info@dealergears.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>

    <string name="menu_home">Barcode Scanner</string>
    <string name="button_scan">Scan License</string>
    <string name="button_capture">Capture License</string>
    <string name="menu_gallery">Map</string>
    <string name="menu_slideshow">Routes</string>
    <string name="menu_webview">Vehicles</string>

    <string name="barcode_button_save">Save</string>

    <string name="preview_area">Barcode Scanner Preview</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_view_job">View Job</string>
</resources>