<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_routes">

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.example.dgkotlin.ui.scan.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.dgkotlin.ui.map.MapFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.dgkotlin.ui.routes.RoutesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/nav_webview"
        android:name="com.example.dgkotlin.ui.webview.WebviewFragment"
        android:label="@string/menu_webview"
        tools:layout="@layout/fragment_webview" />

</navigation>